--- a/content/index.html
+++ b/content/index.html
@@ -40,9 +40,24 @@
   </div><!-- /.container-fluid -->
 </nav>
 <div class="container-fluid">
+  <div id="slides" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="../images/rightpoint732.JPG" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../images/rightpoint732.JPG" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="..." alt="Third slide">
+    </div>
+  </div>
+</div>
+</div>
+<div class="container-fluid">
   <h2>test</h2>
   <p>This is just a moderest test</p>
 </div>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="node_modules/jquery/dist/jquery.js"></script>
 </body>
 </html>
