Project: - Installed bower gulp yomean locally - enssured it is in gitignore Css: - background color change - Font-size

--- a/Playground/app/index.html
+++ b/Playground/app/index.html
@@ -58,6 +58,7 @@
     
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
+    <script src="scripts/controllers/main.js"></script>
     <!-- endbuild -->
   </body>
 </html>
