Lots of changes! - Create a universal nav across all pages. - Boilerplate - HTML 5 implemented - Blog page main scc - Bolierplate page main scss - Boilerplate page created - Styling of mobile responsive for blog posts on boilerplate page - clean up

--- a/Playground/app/index.html
+++ b/Playground/app/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
@@ -26,6 +26,17 @@
     <!--[if IE]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+
+      <header>
+        <div class="nav">
+          <ul>
+            <li class="home"><a  class="active"href="/index.html">Home</a></li>
+            <li class="kelsey"><a href="/kelsey.html">Kelsey</a></li>
+            <li class="boilerplate"><a href="/boilerplate.html">Boilerplate</a></li>
+
+          </ul>
+        </div>
+      </header>
 
     <div class="hero-unit">
       <h1>Muhammad's Playground</h1>
